# predictive-maintenance-mlops

./: .env.example  .gitignore  GPU_SETUP_GUIDE.md  PROJECT_SPECIFICATION.md  README.md  docker-compose.yml  fix_markdown_cells.py  fix_notebook.py  pyproject.toml  pytest.ini  setup_env.ps1  verify_cpu.py  verify_gpu.py
.github/workflows/: ci.yml
assets/: architecture.md
docker/: Dockerfile.api
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_xgboost.ipynb  04_lstm_model.ipynb  05_ensemble.ipynb
notebooks/data/models/: lstm_metrics.json
requirements/: base.txt  dev.txt  serving.txt  training.txt
src/monitoring/: __init__.py  drift_detection.py
src/pipelines/: prefect_flow.py
src/serving/: api.py
src/training/: ensemble_pipeline.py  lstm_pipeline.py  mlflow_utils.py  trainer.py  xgboost_pipeline.py
tests/integration/: test_api.py  test_training_pipelines.py
tests/unit/: test_cli_mains.py  test_drift_detection.py  test_prefect_flow.py  test_training_utils.py
